--- a/CodingIndia/MyCodes/templates/MyCodes/codes_play.html
+++ b/CodingIndia/MyCodes/templates/MyCodes/codes_play.html
@@ -1,6 +1,8 @@
 {% extends 'website/index.html' %}
 
 {% block content %}
+
+{% load static %}
 <div class="container">
     <h1 class="text-center mt-4 mb-3 servicetitle"
     style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-weight: 600;">{{play.name}}</h1>
