--- a/CodingIndia/website/templates/website/index.html
+++ b/CodingIndia/website/templates/website/index.html
@@ -38,6 +38,7 @@
     <div class="close-button" id="closeButton">&times;</div>
     <a href="{% url 'blogs_index' %}">Blogs</a>
     <a href="{% url 'code_index' %}">Coding</a>
+    <a href="{% url 'project_index' %}">Projects</a>
     <a href="#">Website Development</a>
     <a href="#">Django Development</a>
     <!-- Add more options as needed -->
