--- a/CodingIndia/MyCodes/templates/MyCodes/codes_play.html
+++ b/CodingIndia/MyCodes/templates/MyCodes/codes_play.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 {% load static %}
-<div class="container">
+<div class="container mb-5">
     <h1 class="text-center mt-4 mb-3 servicetitle"
     style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-weight: 600;">{{play.name}}</h1>
     <div class="row">
