--- a/CodingIndia/MyCodes/templates/MyCodes/code_index.html
+++ b/CodingIndia/MyCodes/templates/MyCodes/code_index.html
@@ -38,7 +38,7 @@
                 <div class="card-body">
                     <h5 class="card-title">{{i.name}}</h5>
                     <p class="card-text">Coding India</p>
-                    <a href="{% url 'codes_play' i.id %}" class="btn loginbtn">View Tutorial</a>
+                    <a href="{% url 'codes_play' i.id %}" class="btn btn-outline-dark loginbtn">View Tutorial</a>
                 </div>
             </div>
             {% endfor code %}
