--- a/CodingIndia/projects/templates/projects/index.html
+++ b/CodingIndia/projects/templates/projects/index.html
@@ -25,7 +25,7 @@ style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-s
             <div class="card-body">
                 <h5 class="card-title">{{i.name|slice:"0:30"}}...</h5>
                 <p class="card-text">{{i.date}}</p>
-                <a href="{% url 'read-codes' i.id %}" class="btn loginbtn">View Code</a>
+                <a href="{% url 'read-codes' i.id %}" class="btn btn-outline-dark loginbtn">View Code</a>
             </div>
         </div>
         {% endfor %}
