--- a/CodingIndia/blogs/templates/blogs/index.html
+++ b/CodingIndia/blogs/templates/blogs/index.html
@@ -33,7 +33,7 @@ integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQI
         <div class="row">
             {% for i in play %}
             <div class="card m-1" style="width: 17rem;">
-                <img style="width: 100%; height: 150px;" src="{{i.img.url}}" class="card-img-top" alt="...">
+                <img style="width: 100%; height: 150px;" src="{{i.img}}" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">{{i.name}}</h5>
                   <p class="card-text">Coding India</p>
