Changes Image field to Url field

--- a/CodingIndia/website/templates/website/index.html
+++ b/CodingIndia/website/templates/website/index.html
@@ -44,11 +44,12 @@
     <!-- Add more options as needed -->
   </nav>
     <video loop muted playsinline class="background-video">
-      <source
-        src="https://v4.cdnpk.net/videvo_files/video/free/video0485/large_watermarked/_import_61b593756995c2.98061119_FPpreview.mp4"
+      <!-- <source
+        src="https://elements.envato.com/hacker-programs-programs-for-hacking-sites-JECU685"
         type="video/mp4" />
       Your browser does not support the video tag.
-    </video>
+    </video> -->
+    <img src="https://images.unsplash.com/photo-1541186877-bb5a745edde5?auto=format&fit=crop&q=60&w=500&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTZ8fHByb2dyYW1taW5nJTIwYmxhY2slMjBpbWFnZXxlbnwwfHwwfHx8MA%3D%3D" class="background-video" alt="">
     <div class="container header-container">
       <!-- <h1>Coding India</h1>
       <p>Empowering India With Technology</p> -->
