--- a/CodingIndia/website/templates/website/index.html
+++ b/CodingIndia/website/templates/website/index.html
@@ -49,7 +49,7 @@
         type="video/mp4" />
       Your browser does not support the video tag.
     </video> -->
-    <img src="https://images.unsplash.com/photo-1541186877-bb5a745edde5?auto=format&fit=crop&q=60&w=500&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTZ8fHByb2dyYW1taW5nJTIwYmxhY2slMjBpbWFnZXxlbnwwfHwwfHx8MA%3D%3D" class="background-video" alt="">
+    <img src="https://images.unsplash.com/photo-1541186877-bb5a745edde5?auto=format&fit=crop&q=60&w=500&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTZ8fHByb2dyYW1taW5nJTIwYmxhY2slMjBpbWFnZXxlbnwwfHwwfHx8MA%3D%3D" class="" alt="">
     <div class="container header-container">
       <!-- <h1>Coding India</h1>
       <p>Empowering India With Technology</p> -->
