Changes Image field to Url field

--- a/CodingIndia/website/templates/website/index2.html
+++ b/CodingIndia/website/templates/website/index2.html
@@ -7,14 +7,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- bootstrap grid css -->
-    <link rel="stylesheet" href="css/plugins/bootstrap-grid.css">
+    <link rel="stylesheet" href="{% static 'css/plugins/bootstrap-grid.css' %}">
     <!-- font awesome css -->
-    <link rel="stylesheet" href="css/plugins/font-awesome.min.css">
+    <link rel="stylesheet" href="{% static 'css/plugins/font-awesome.min.css' %}">
     <!-- swiper css -->
-    <link rel="stylesheet" href="css/plugins/swiper.min.css">
+    <link rel="stylesheet" href="{% static 'css/plugins/swiper.min.css' %}">
     <!-- itsulu css -->
-    <link rel="stylesheet" href="css/style.css">
-    <title>ITSulu</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <title>Coding India</title>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6CFWQNJKH8"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-6CFWQNJKH8');
+</script>
 </head>
 
 <body>
@@ -1037,12 +1047,12 @@
     <!-- wrapper end -->
 
     <!-- jQuery js -->
-    <script src="js/plugins/jquery.min.js"></script>
+    <script src="{% static 'js/plugins/jquery.min.js' %}"></script>
     <!-- swiper js -->
-    <script src="js/plugins/swiper.min.js"></script>
+    <script src="{% static 'js/plugins/swiper.min.js' %}"></script>
     <!-- itsulu js -->
-    <script src="js/main.js"></script>
-    <script src="js/forms.js"></script>
+    <script src="{% static 'js/main.js' %}"></script>
+    <script src="{% static 'js/forms.js' %}"></script>
 
 </body>
 
