--- a/CodingIndia/website/templates/website/index.html
+++ b/CodingIndia/website/templates/website/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    {% load static %}
     <!-- bootstrap grid css -->
     <link rel="stylesheet" href="{% static 'css/plugins/bootstrap-grid.css' %}">
     <!-- font awesome css -->
