Changes Image field to Url field

--- a/CodingIndia/website/templates/website/index.html
+++ b/CodingIndia/website/templates/website/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="{% static 'css/plugins/font-awesome.min.css' %}">
     <!-- swiper css -->
     <link rel="stylesheet" href="{% static 'css/plugins/swiper.min.css' %}">
-    <!-- itsulu css -->
+    <!-- Coding India css -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <title>Coding India</title>
 
@@ -105,7 +105,7 @@
             <div class="swiper-container mil-banner-slideshow">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="img/photo/1.jpg" class="mil-background-image" style="object-position: center" data-swiper-parallax="-100" data-swiper-parallax-scale="1.1" alt="image">
+                        <img src="https://images.unsplash.com/photo-1516321318423-f06f85e504b3?auto=format&fit=crop&q=60&w=500&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8aXQlMjBzZXJ2aWNlfGVufDB8fDB8fHww" class="mil-background-image" style="object-position: center" data-swiper-parallax="-100" data-swiper-parallax-scale="1.1" alt="image">
                     </div>
                     <div class="swiper-slide">
                         <img src="img/photo/2.jpg" class="mil-background-image" style="object-position: center" data-swiper-parallax="-100" data-swiper-parallax-scale="1.1" alt="image">
@@ -999,7 +999,7 @@
                             <div class="row">
                                 <div class="col-lg-7 mil-mb-30">
 
-                                    <h3 class="mil-light mil-up-font mil-mb-30">Join The <span class="mil-accent">ITSulu</span> <br>Experience</h3>
+                                    <h3 class="mil-light mil-up-font mil-mb-30">Join The <span class="mil-accent">Coding India</span> <br>Experience</h3>
                                     <p class="mil-light-soft">Lorem ipsum dolor sit amet, consectetuer<br> adipiscing elit, sed diam nonummy.</p>
 
                                 </div>
@@ -1037,7 +1037,7 @@
             </div>
             <div class="mil-footer-bottom">
                 <div class="container">
-                    <p class="mil-text-sm mil-light">© ITSulu 2023.</p>
+                    <p class="mil-text-sm mil-light">© Coding India 2023.</p>
                     <p class="mil-text-sm mil-light">All Rights Reserved.</p>
                 </div>
             </div>
@@ -1051,7 +1051,7 @@
     <script src="{% static 'js/plugins/jquery.min.js' %}"></script>
     <!-- swiper js -->
     <script src="{% static 'js/plugins/swiper.min.js' %}"></script>
-    <!-- itsulu js -->
+    <!-- Coding India js -->
     <script src="{% static 'js/main.js' %}"></script>
     <script src="{% static 'js/forms.js' %}"></script>
 
