Changes Image field to Url field

--- a/CodingIndia/static/css/style.css
+++ b/CodingIndia/static/css/style.css
@@ -1784,7 +1784,7 @@ top panel
           box-shadow: none;
 }
 .mil-top-panel.mil-top-panel-transparent .mil-logo {
-  background-image: url(../img/logo/logo-light.png);
+  background-image: url(../images/cilogo.png);
 }
 .mil-top-panel.mil-top-panel-transparent .mil-navigation nav ul li a {
   color: rgb(255, 255, 255);
@@ -1809,7 +1809,7 @@ top panel
     background-color: rgb(255, 255, 255);
   }
   .mil-top-panel.mil-top-panel-transparent .mil-logo {
-    background-image: url(../img/logo/logo-dark.png);
+    background-image: url(../images/cilogo.png);
   }
   .mil-top-panel.mil-top-panel-transparent .mil-navigation nav ul li a {
     color: rgb(18, 24, 32);
