Changes Image field to Url field

--- a/CodingIndia/website/templates/website/index.html
+++ b/CodingIndia/website/templates/website/index.html
@@ -41,7 +41,7 @@
                     <div class="mil-navigation">
                         <nav>
                             <ul>
-                                <li class="mil-has-children">
+                                <!-- <li class="mil-has-children">
                                     <a href="#.">Enterprise</a>
                                     <ul>
                                         <li><a href="home-2.html">Home V2</a></li>
@@ -53,34 +53,34 @@
                                         <li><a href="faq.html">FAQ</a></li>
                                         <li><a href="event.html">Event</a></li>
                                     </ul>
-                                </li>
-                                <li><a href="portfolio.html">Case Studies</a></li>
+                                </li> -->
+                                <!-- <li><a href="portfolio.html">Case Studies</a></li> -->
                                 <li class="mil-has-children">
                                     <a href="#.">Services</a>
                                     <ul>
-                                        <li><a href="service-1.html">Service 1</a></li>
-                                        <li><a href="service-2.html">Service 2</a></li>
-                                        <li><a href="service-3.html">Service 3</a></li>
-                                        <li><a href="service-4.html">Service 4</a></li>
+                                        <li><a href="#">AI/ML</a></li>
+                                        <!-- <li><a href="service-2.html">ML</a></li> -->
+                                        <li><a href="#">Website Development</a></li>
+                                        <li><a href="#">App Development</a></li>
                                     </ul>
                                 </li>
-                                <li class="mil-has-children">
+                                <!-- <li class="mil-has-children">
                                     <a href="#.">Solutions</a>
                                     <ul>
                                         <li><a href="solution-1.html">Solution 1</a></li>
                                         <li><a href="solution-2.html">Solution 2</a></li>
                                         <li><a href="solution-3.html">Solution 3</a></li>
                                     </ul>
-                                </li>
-                                <li><a href="blog.html">Blog</a></li>
-                                <li><a href="contact.html">Contact Us</a></li>
-                                <li class="mil-has-children">
+                                </li> -->
+                                <li><a href="{% url 'blogs_index' %}">Blog</a></li>
+                                <li><a href="{% url 'contactus' %}">Contact Us</a></li>
+                                <!-- <li class="mil-has-children">
                                     <a href="#.">Other</a>
                                     <ul>
                                         <li><a href="coming-soon.html">Coming Soon</a></li>
                                         <li><a href="404.html">404</a></li>
                                     </ul>
-                                </li>
+                                </li> -->
                             </ul>
                             <div class="mil-search-icon">
                                 <svg width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -139,7 +139,7 @@
                                             <div class="mil-window-content">
                                                 <h5 class="mil-dark mil-mb-15">Experts</h5>
                                                 <div class="mil-divider mil-divider-left mil-mb-15"></div>
-                                                <p class="mil-text-sm">And here's some amazing content. It's very engaging. Right?</p>
+                                                <p class="mil-text-sm">We have a dedicated team of Domain.</p>
                                             </div>
                                         </div>
                                         <div class="mil-item-hover">
@@ -154,7 +154,7 @@
                                             <div class="mil-window-content">
                                                 <h5 class="mil-dark mil-mb-15">Experts</h5>
                                                 <div class="mil-divider mil-divider-left mil-mb-15"></div>
-                                                <p class="mil-text-sm">And here's some amazing content. It's very engaging. Right?</p>
+                                                <p class="mil-text-sm">We are good in Building Websites, Mobile Apps etc</p>
                                             </div>
                                         </div>
                                         <div class="mil-item-hover">
@@ -167,14 +167,14 @@
                                     <div class="mil-plus">
                                         <div class="mil-hover-window">
                                             <div class="mil-window-content">
-                                                <h5 class="mil-dark mil-mb-15">Experts</h5>
+                                                <h5 class="mil-dark mil-mb-15">AI</h5>
                                                 <div class="mil-divider mil-divider-left mil-mb-15"></div>
-                                                <p class="mil-text-sm">And here's some amazing content. It's very engaging. Right?</p>
+                                                <p class="mil-text-sm">Lets deep dive into AI/ML </p>
                                             </div>
                                         </div>
                                         <div class="mil-item-hover">
                                             <div class="mil-plus-icon">+</div>
-                                            <h6 class="mil-light">Designers</h6>
+                                            <h6 class="mil-light">Future Trends</h6>
                                         </div>
                                     </div>
                                 </div>
