--- a/CodingIndia/website/templates/website/index.html
+++ b/CodingIndia/website/templates/website/index.html
@@ -33,7 +33,7 @@
     <!-- wrapper -->
     <div class="mil-wrapper">
         <!-- top bar -->
-        <div class="mil-top-position mil-fixed">ai 
+        <div class="mil-top-position mil-fixed"> 
             <div class="mil-top-panel mil-top-panel-transparent mil-animated">
                 <!-- mil-top-panel-transparent -->
                 <div class="container">
@@ -128,7 +128,7 @@
                                 <div>
                                     <a href="{% url 'contactus' %}" class="mil-button mil-border mil-light"><span>Let’s Talk</span></a>
                                 </div>
-                                <p class="mil-button-descr mil-light-soft">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                <!-- <p class="mil-button-descr mil-light-soft">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
                             </div>
                         </div>
                         <div class="col-xl-4">
@@ -137,9 +137,9 @@
                                     <div class="mil-plus">
                                         <div class="mil-hover-window">
                                             <div class="mil-window-content">
-                                                <h5 class="mil-dark mil-mb-15">Experts</h5>
+                                                <h5 class="mil-dark mil-mb-15">Tea For You</h5>
                                                 <div class="mil-divider mil-divider-left mil-mb-15"></div>
-                                                <p class="mil-text-sm">We have a dedicated team of Domain.</p>
+                                                <p class="mil-text-sm">We have a dedicated team of experts in all Domain.</p>
                                             </div>
                                         </div>
                                         <div class="mil-item-hover">
