--- a/CodingIndia/website/templates/website/index2.html
+++ b/CodingIndia/website/templates/website/index2.html
@@ -32,7 +32,7 @@
     <!-- wrapper -->
     <div class="mil-wrapper">
         <!-- top bar -->
-        <div class="mil-top-position mil-fixed">ai 
+        <div class="mil-top-position mil-fixed">
             <div class="mil-top-panel mil-top-panel-transparent mil-animated">
                 <!-- mil-top-panel-transparent -->
                 <div class="container">
