Changes Image field to Url field

--- a/CodingIndia/website/templates/website/index.html
+++ b/CodingIndia/website/templates/website/index.html
@@ -37,50 +37,20 @@
             <div class="mil-top-panel mil-top-panel-transparent mil-animated">
                 <!-- mil-top-panel-transparent -->
                 <div class="container">
-                    <a href="home-1.html" class="mil-logo" style="width: 140px"></a>
+                    <a href="/" class="mil-logo" style="width: 140px"></a>
                     <div class="mil-navigation">
                         <nav>
                             <ul>
-                                <!-- <li class="mil-has-children">
-                                    <a href="#.">Enterprise</a>
-                                    <ul>
-                                        <li><a href="home-2.html">Home V2</a></li>
-                                        <li><a href="about.html">About us</a></li>
-                                        <li><a href="team.html">Team</a></li>
-                                        <li><a href="team-single.html">Team Member</a></li>
-                                        <li><a href="careers.html">Careers</a></li>
-                                        <li><a href="prices.html">Prices</a></li>
-                                        <li><a href="faq.html">FAQ</a></li>
-                                        <li><a href="event.html">Event</a></li>
-                                    </ul>
-                                </li> -->
-                                <!-- <li><a href="portfolio.html">Case Studies</a></li> -->
                                 <li class="mil-has-children">
                                     <a href="#.">Services</a>
                                     <ul>
                                         <li><a href="#">AI/ML</a></li>
-                                        <!-- <li><a href="service-2.html">ML</a></li> -->
                                         <li><a href="#">Website Development</a></li>
                                         <li><a href="#">App Development</a></li>
                                     </ul>
                                 </li>
-                                <!-- <li class="mil-has-children">
-                                    <a href="#.">Solutions</a>
-                                    <ul>
-                                        <li><a href="solution-1.html">Solution 1</a></li>
-                                        <li><a href="solution-2.html">Solution 2</a></li>
-                                        <li><a href="solution-3.html">Solution 3</a></li>
-                                    </ul>
-                                </li> -->
                                 <li><a href="{% url 'blogs_index' %}">Blog</a></li>
                                 <li><a href="{% url 'contactus' %}">Contact Us</a></li>
-                                <!-- <li class="mil-has-children">
-                                    <a href="#.">Other</a>
-                                    <ul>
-                                        <li><a href="coming-soon.html">Coming Soon</a></li>
-                                        <li><a href="404.html">404</a></li>
-                                    </ul>
-                                </li> -->
                             </ul>
                             <div class="mil-search-icon">
                                 <svg width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -978,7 +948,7 @@
 
                             <img src="img/logo/logo-light.png" alt="" class="mil-logo mil-mb-30" style="width: 140px">
 
-                            <p class="mil-light-soft mil-mb-30">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                            <p class="mil-light-soft mil-mb-30">We're your trusted partner in web development. At <a href="https://codingindia.co.in/">Coding India</a>, we transform ideas into stunning websites that make a mark. With a passion for innovation and a commitment to excellence, we create web solutions tailored to your needs. Let us bring your digital vision to life.</p>
 
                             <a href="#." class="mil-app-btn mil-mb-5">
                                 <i class="fab fa-google-play"></i>
