--- a/CodingIndia/website/templates/website/index.html
+++ b/CodingIndia/website/templates/website/index.html
@@ -155,31 +155,17 @@
             </div>
         </div>
         <!-- banner end -->
-
-        <!-- partners -->
-        <div class="mil-partners mil-p-90-60">
-            <div class="container">
-                <div class="mil-partners-frame">
-                    <a href="#."><img src="img/partners/1.png" alt="partner"></a>
-                    <a href="#."><img src="img/partners/2.png" alt="partner"></a>
-                    <a href="#."><img src="img/partners/3.png" alt="partner"></a>
-                    <a href="#."><img src="img/partners/4.png" alt="partner"></a>
-                    <a href="#."><img src="img/partners/5.png" alt="partner"></a>
-                    <a href="#."><img src="img/partners/6.png" alt="partner"></a>
-                </div>
-            </div>
-        </div>
-        <!-- partners end -->
-
+<!-- 
+     
         <div class="container">
             <div class="mil-divider"></div>
-        </div>
+        </div> -->
 
         <!-- services -->
         <section class="mil-services mil-p-120-90">
             <div class="mil-deco" style="top: 0; right: 20%;"></div>
             <div class="container">
-                <h2 class="mil-mb-30">How We Can <span class="mil-accent">Help You</span></h2>
+                <h2 class="mil-mb-30">What are our <span class="mil-accent">core Services</span></h2>
                 <div class="row">
                     <div class="col-lg-6 col-xl-6">
                         <h4 class="mil-mb-60 mil-mt-30">IT Services</h4>
@@ -187,36 +173,41 @@
                         <div class="mil-service-item">
                             <div class="mil-service-icon">
                                 <div class="mil-icon-frame mil-icon-frame-md">
-                                    <img src="img/icons/md/1.svg" alt="icon">
+                                    <img src="https://images.unsplash.com/photo-1467232004584-a241de8bcf5d?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8d2Vic2l0ZSUyMGRldmVsb3BtZW50fGVufDB8fDB8fHww" style="width: 300px; height: 150px; margin-top: 120px; border-radius: 15px;" alt="icon">
                                 </div>
                             </div>
                             <div class="mil-service-text">
-                                <h5 class="mil-mb-30"><span class="mil-accent">01</span> Dedicated Team</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                <h5 class="mil-mb-30"><span class="mil-accent">01</span> Website Development</h5>
+                               <p>Building or redesigning websites to be mobile-friendly and user-friendly.</p>
+                                <p>E-commerce website development.</p>
+                                <p>User experience (UX) and user interface (UI) design.</p>
                             </div>
                         </div>
                         <div class="mil-divider mil-divider-left"></div>
                         <div class="mil-service-item">
                             <div class="mil-service-icon">
                                 <div class="mil-icon-frame mil-icon-frame-md">
-                                    <img src="img/icons/md/2.svg" alt="icon">
+                                    <img src="https://images.unsplash.com/photo-1562577309-2592ab84b1bc?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c2VvfGVufDB8fDB8fHww" style="width: 300px; height: 150px; margin-top: 120px; border-radius: 15px;" alt="icon">
                                 </div>
                             </div>
                             <div class="mil-service-text">
-                                <h5 class="mil-mb-30"><span class="mil-accent">02</span> QA and Testing</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                <h5 class="mil-mb-30"><span class="mil-accent">02</span> SEO</h5>
+                                <p>On-page and off-page SEO to improve a website's search engine rankings.</p>
+                                <p>Keyword research and optimization.</p>
+                                <p>Content optimization and creation for search engines.</p>
                             </div>
                         </div>
                         <div class="mil-divider mil-divider-left"></div>
                         <div class="mil-service-item">
                             <div class="mil-service-icon">
                                 <div class="mil-icon-frame mil-icon-frame-md">
-                                    <img src="img/icons/md/3.svg" alt="icon">
+                                    <img src="https://images.unsplash.com/photo-1521302200778-33500795e128?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8eW91dHViZXxlbnwwfHwwfHx8MA%3D%3D" style="width: 300px; height: 150px; margin-top: 120px; border-radius: 15px;" alt="icon">
                                 </div>
                             </div>
                             <div class="mil-service-text">
-                                <h5 class="mil-mb-30"><span class="mil-accent">03</span> SaaS</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                <h5 class="mil-mb-30"><span class="mil-accent">03</span> Video Marketing</h5>
+                                <p>Creating and optimizing video content for platforms like YouTube.</p>
+                                <p>Video advertising and promotion.</p>
                             </div>
                         </div>
                     </div>
@@ -226,36 +217,41 @@
                         <div class="mil-service-item">
                             <div class="mil-service-icon">
                                 <div class="mil-icon-frame mil-icon-frame-md">
-                                    <img src="img/icons/md/4.svg" alt="icon">
+                                    <img src="https://images.unsplash.com/photo-1512415031623-5c8392938dc4?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8cGF5JTIwcGVyJTIwY2xpY2t8ZW58MHx8MHx8fDA%3D" style="width: 300px; height: 150px; margin-top: 120px; border-radius: 15px;" alt="icon">
                                 </div>
                             </div>
                             <div class="mil-service-text">
-                                <h5 class="mil-mb-30"><span class="mil-accent">01</span> Blockchain</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                <h5 class="mil-mb-30"><span class="mil-accent">01</span> Pay-Per-Click (PPC) Advertising</h5>
+                                <p>Google Ads and Bing Ads management.</p>
+                                <p>Social media advertising campaigns (e.g., Facebook Ads, Instagram Ads, LinkedIn Ads).</p>
+                                <p>Keyword research and ad creation.</p>
                             </div>
                         </div>
                         <div class="mil-divider mil-divider-left"></div>
                         <div class="mil-service-item">
                             <div class="mil-service-icon">
                                 <div class="mil-icon-frame mil-icon-frame-md">
-                                    <img src="img/icons/md/5.svg" alt="icon">
+                                    <img src="https://images.unsplash.com/photo-1631427962232-803d4f30c64f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fGNoYXQlMjBib3R8ZW58MHx8MHx8fDA%3D" style="width: 300px; height: 150px; margin-top: 120px; border-radius: 15px;" alt="icon">
                                 </div>
                             </div>
                             <div class="mil-service-text">
-                                <h5 class="mil-mb-30"><span class="mil-accent">02</span> Artificial Intelligence</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                <h5 class="mil-mb-30"><span class="mil-accent">02</span> Chatbot and AI Marketing</h5>
+                                <p>Implementing chatbots for customer service and marketing.</p>
+                                <p>Leveraging artificial intelligence for personalization and insights.</p>
                             </div>
                         </div>
                         <div class="mil-divider mil-divider-left"></div>
                         <div class="mil-service-item">
                             <div class="mil-service-icon">
                                 <div class="mil-icon-frame mil-icon-frame-md">
-                                    <img src="img/icons/md/6.svg" alt="icon">
+                                    <img src="https://images.unsplash.com/photo-1622549037543-49cf1ca0babc?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8c29jaWFsJTIwbWVkaWElMjBtYXJrZXRpbmd8ZW58MHx8MHx8fDA%3D" style="width: 300px; height: 150px; margin-top: 120px; border-radius: 15px;" alt="icon">
                                 </div>
                             </div>
                             <div class="mil-service-text">
-                                <h5 class="mil-mb-30"><span class="mil-accent">03</span> Internet of Things</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                <h5 class="mil-mb-30"><span class="mil-accent">03</span> Social Media Marketing</h5>
+                                <p>Social media strategy development.</p>
+                                <p>Social media advertising campaigns.</p>
+                                <p>Community management and engagement.</p>
                             </div>
                         </div>
                     </div>
@@ -294,17 +290,17 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
 
-                            <a href="project.html" class="mil-card">
+                            <a href="https://jaspo.codingindia.co.in/" class="mil-card">
                                 <div class="mil-cover-frame">
-                                    <img src="img/projects/1.jpg" alt="project">
+                                    <img src="{% static 'images/jaspohome.png' %}" alt="project">
                                 </div>
                                 <div class="mil-description">
                                     <div class="mil-card-title">
-                                        <h4 class="mil-mb-20">Easy & Most Powerful Server Platform.</h4>
-                                        <h6>by: <span class="mil-accent">Jane Meldrum</span></h6>
+                                        <h4 class="mil-mb-20">We are expert in creating E-commerce Website.</h4>
+                                        <h6>by: <span class="mil-accent">coding India</span></h6>
                                     </div>
                                     <div class="mil-card-text">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                        <p>sport</p>
                                     </div>
                                 </div>
                             </a>
