--- a/CodingIndia/website/templates/website/index.html
+++ b/CodingIndia/website/templates/website/index.html
@@ -154,22 +154,7 @@
                 </div>
             </div>
         </div>
-        <!-- banner end -->
 
-        <!-- partners -->
-        <div class="mil-partners mil-p-90-60">
-            <div class="container">
-                <div class="mil-partners-frame">
-                    <a href="#."><img src="img/partners/1.png" alt="partner"></a>
-                    <a href="#."><img src="img/partners/2.png" alt="partner"></a>
-                    <a href="#."><img src="img/partners/3.png" alt="partner"></a>
-                    <a href="#."><img src="img/partners/4.png" alt="partner"></a>
-                    <a href="#."><img src="img/partners/5.png" alt="partner"></a>
-                    <a href="#."><img src="img/partners/6.png" alt="partner"></a>
-                </div>
-            </div>
-        </div>
-        <!-- partners end -->
 
         <div class="container">
             <div class="mil-divider"></div>
@@ -179,7 +164,7 @@
         <section class="mil-services mil-p-120-90">
             <div class="mil-deco" style="top: 0; right: 20%;"></div>
             <div class="container">
-                <h2 class="mil-mb-30">How We Can <span class="mil-accent">Help You</span></h2>
+                <h2 class="mil-mb-30">What We Are <span class="mil-accent">Expert</span> In</h2>
                 <div class="row">
                     <div class="col-lg-6 col-xl-6">
                         <h4 class="mil-mb-60 mil-mt-30">IT Services</h4>
